fix for mobile resize to fit on smaller screens on min size

--- a/assets/css/posts.css
+++ b/assets/css/posts.css
@@ -20,7 +20,8 @@
 
     padding: 1px;
     min-height: 450px;
-    width: 364px;
+    max-width: 364px;
+    min-width: 290px;
     margin: 0px 7px 5px 7px;
 }
 
